--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,9 +85,9 @@ html {
 
 
 /* Main*/
-#main {
+/* #main {
 
-}
+} */
 
 #header {
     position: fixed;
@@ -175,9 +175,9 @@ html {
 
 #slider {
     position: relative;
-    margin-top: 46px;
+    /* margin-top: 46px;
     padding-top: 50%;
-    background: url('/assets/img/slider/slider1.jpg') top center / cover no-repeat;
+    background: top center / cover no-repeat; */
 }
 
 #slider .text-content {
@@ -198,9 +198,9 @@ html {
     margin-top: 25px;
 }
 
-#content {
+/* #content {
 
-}
+} */
 
 #content .content-section {
     width: 800px;
@@ -489,7 +489,7 @@ html {
         transform: translateY(-140px);
     }
     to {
-        opacity: ;
+        opacity: 1;
         transform: translateY(0);
     }
 }
